--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/react": "^16.8.0",
     "@types/react-dom": "^16.8.0"
   },
-  "groups": {
+  "collections": {
     "packages": ["packages/*"],
     "nohoist": [
       "**/webpack",
