--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -9,6 +9,9 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "emotion": "^10.0.14",
+    "graphiql": "^0.14.2",
+    "graphql": "^14.5.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
