--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -25,6 +25,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "emotion": "^10.0.17",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-outside-click-handler": "^1.2.4"
