--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wga-theme",
   "private": false,
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Theme for the Window Gadgets Authenticator.",
   "license": "MIT",
   "main": "lib/index.js",
@@ -17,6 +17,7 @@
   ],
   "scripts": {
     "start": "nodemon",
+    "prepublishOnly": "yarn build",
     "test": "mocha -r ts-node/register src/**/*.test.ts",
     "build": "yarn run clean && yarn run compile",
     "clean": "rm -rf lib",
