--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -9,12 +9,18 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "emotion": "^10.0.14",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.4",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
+    "emotion": "^10.0.17",
     "graphiql": "^0.14.2",
     "graphql": "^14.5.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "typescript": "3.6.2",
+    "wga-theme": "^0.1.1"
   },
   "eslintConfig": {
     "extends": "react-app"
