--- a/packages/admin/public/manifest.json
+++ b/packages/admin/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Authenticator",
+  "name": "The fastest way to add auth to your app",
   "icons": [
     {
       "src": "favicon.ico",
@@ -16,7 +16,7 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
-    }	    
+    }	 
   ],
   "start_url": ".",
   "display": "standalone",
