--- a/package.json
+++ b/package.json
@@ -8,29 +8,15 @@
     "build": "lerna run build",
     "test": "lerna run test"
   },
-  "devDependencies": {
-    "lerna": "^3.4.3",
+  "dependencies": {
     "prettier": "^1.15.2",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^3.6.0"
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.6.2"
   },
-  "resolutions": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "@types/react": "^16.8.0",
-    "@types/react-dom": "^16.8.0"
-  },
-  "collections": {
-    "packages": ["packages/*"],
-    "nohoist": [
-      "**/webpack",
-      "**/webpack/**",
-      "**/webpack-cli",
-      "**/webpack-cli/**",
-      "**/webpack-dev-server",
-      "**/webpack-dev-server/**"
-    ]
-  }
+  "workspaces": [
+    "packages/*"
+  ]
 }
