--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -26,10 +26,12 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@types/yup": "^0.26.23",
     "emotion": "^10.0.17",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-outside-click-handler": "^1.2.4"
+    "react-outside-click-handler": "^1.2.4",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
