--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -6,13 +6,16 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.4",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/yup": "^0.26.23",
     "emotion": "^10.0.17",
     "graphiql": "^0.14.2",
     "graphql": "^14.5.4",
@@ -20,7 +23,21 @@
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "typescript": "3.6.2",
-    "wga-theme": "^0.1.1"
+    "wga-theme": "^0.1.1",
+    "yup": "^0.27.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "@storybook/addon-actions": "^5.1.3",
+    "@storybook/addon-links": "^5.1.3",
+    "@storybook/addons": "^5.1.3",
+    "@storybook/react": "^5.1.3",
+    "@types/storybook__addon-actions": "^3.4.3",
+    "@types/storybook__addon-links": "^3.3.5",
+    "@types/storybook__react": "^4.0.2",
+    "babel-loader": "^8.0.6"
   },
   "eslintConfig": {
     "extends": "react-app"
