--- a/packages/authenticator/package.json
+++ b/packages/authenticator/package.json
@@ -22,7 +22,12 @@
     "clean": "rm -rf lib",
     "compile": "tsc"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@types/isomorphic-fetch": "^0.0.35",
+    "es6-promise": "^4.2.8",
+    "isomorphic-fetch": "^2.2.1",
+    "utility-types": "^3.7.0"
+  },
   "devDependencies": {
     "nodemon": "^1.19.1",
     "ts-node": "^8.3.0",
