--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "typescript": "3.6.2",
+    "wga-api": "^0.1.5",
     "wga-theme": "^0.1.1",
     "yup": "^0.27.0"
   },
