--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,16 +21,21 @@
     "create": "yarn run clean && yarn run compile"
   },
   "dependencies": {
+    "@sentry/node": "^5.6.2",
     "@types/graphql": "^14.5.0",
     "@types/graphql-iso-date": "^3.3.3",
     "@types/graphql-type-json": "^0.3.2",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/micro": "^7.3.3",
     "@types/node": "^12.7.2",
+    "@types/node-fetch": "^2.5.0",
     "graphql": "^14.5.4",
     "graphql-iso-date": "^3.6.1",
     "graphql-type-json": "^0.3.0",
     "http-status-codes": "^1.3.2",
+    "jsonwebtoken": "^8.5.1",
     "micro": "^9.3.4",
+    "node-fetch": "^2.6.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3",
     "utility-types": "^3.7.0",
