--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -16,6 +16,7 @@
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "@types/yup": "^0.26.23",
+    "date-fns": "^2.2.1",
     "emotion": "^10.0.17",
     "graphiql": "^0.14.2",
     "graphql": "^14.5.4",
