began work on the gadgets repo

--- a/packages/gadgets/package.json
+++ b/packages/gadgets/package.json
@@ -9,10 +9,13 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@types/yup": "^0.26.24",
     "emotion": "^10.0.17",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "wga-theme": "^0.1.1",
+    "yup": "^0.27.0"
   },
   "eslintConfig": {
     "extends": "react-app"
