--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "typescript": "3.6.2",
+    "wga-plugin": "^0.1.0",
     "wga-theme": "^0.1.1",
     "yup": "^0.27.0"
   },
