--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -23,7 +23,10 @@
     "clean": "rm -rf lib",
     "compile": "tsc"
   },
-  "dependencies": {},
+  "dependencies": {
+    "events-and-things": "^0.4.1",
+    "iframe-radio": "^0.7.7"
+  },
   "devDependencies": {
     "nodemon": "^1.19.1",
     "ts-node": "^8.3.0",
