--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -19,6 +19,7 @@
     "@types/yup": "^0.26.23",
     "date-fns": "^2.2.1",
     "emotion": "^10.0.17",
+    "events-and-things": "^0.6.1",
     "graphiql": "^0.14.2",
     "graphql": "^14.5.4",
     "react": "^16.9.0",
