updated packages and fixed typescript issues

--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "test": "lerna run test"
   },
   "dependencies": {
+    "fs-extra": "^8.1.0",
     "prettier": "^1.15.2",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.16.0",
+    "tslint": "^5.20.0",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^3.6.0",
+    "tslint-react": "^4.1.0",
     "typescript": "^3.6.2"
   },
   "workspaces": [
