--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -21,10 +21,10 @@
     "emotion": "^10.0.17",
     "events-and-things": "^0.6.1",
     "graphiql": "^0.14.2",
-    "graphql": "^14.5.4",
+    "graphql": "^14.5.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.2.0",
     "typescript": "3.6.2",
     "wga-plugin": "^0.1.0",
     "wga-theme": "^0.1.1",
