added axios to api and made simple generator

--- a/packages/wga-api/package.json
+++ b/packages/wga-api/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@types/node-fetch": "^2.5.0",
+    "axios": "^0.19.0",
     "events-and-things": "^0.6.1",
     "node-fetch": "^2.6.0"
   },
