updated the readmes

--- a/packages/admin/public/manifest.json
+++ b/packages/admin/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Authenticator",
-  "name": "Authentication that dominates in performance and usability",
+  "name": "User and team management for your app",
   "icons": [
     {
       "src": "favicon.ico",
