--- a/packages/wga-theme/package.json
+++ b/packages/wga-theme/package.json
@@ -33,6 +33,7 @@
     "emotion": "^10.0.17",
     "events-and-things": "^0.6.1",
     "monaco-editor": "^0.18.1",
+    "monaco-editor-webpack-plugin": "^1.7.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-outside-click-handler": "^1.2.4",
