created the sidebar component

--- a/packages/wga-theme/package.json
+++ b/packages/wga-theme/package.json
@@ -22,7 +22,7 @@
     "build": "yarn run clean && yarn run compile",
     "clean": "rm -rf lib",
     "compile": "tsc",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006 --quiet",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
