--- a/packages/wga-theme/package.json
+++ b/packages/wga-theme/package.json
@@ -26,6 +26,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.0.11",
     "@types/react-outside-click-handler": "^1.2.0",
