--- a/packages/wga-theme/package.json
+++ b/packages/wga-theme/package.json
@@ -27,14 +27,17 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "@types/axios": "^0.14.0",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.0.11",
     "@types/react-outside-click-handler": "^1.2.0",
     "@types/yup": "^0.26.24",
+    "axios": "^0.19.0",
     "emotion": "^10.0.17",
     "events-and-things": "^0.6.1",
     "monaco-editor": "^0.18.1",
     "monaco-editor-webpack-plugin": "^1.7.0",
+    "path-to-regexp": "^3.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-outside-click-handler": "^1.2.4",
