--- a/packages/wga-theme/package.json
+++ b/packages/wga-theme/package.json
@@ -38,6 +38,7 @@
     "monaco-editor": "^0.18.1",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "path-to-regexp": "^3.1.0",
+    "query-string": "^6.8.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-outside-click-handler": "^1.2.4",
