--- a/packages/gadgets/package.json
+++ b/packages/gadgets/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@types/yup": "^0.26.24",
     "axios": "^0.19.0",
+    "change-case": "^3.1.0",
     "emotion": "^10.0.17",
     "events-and-things": "^0.6.2",
     "iframe-radio": "^0.7.7",
