added empty screens

--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -25,7 +25,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "^3.2.0",
-    "typescript": "3.6.2",
+    "typescript": "^3.7.2",
     "wga-plugin": "^0.1.0",
     "wga-theme": "^0.2.1",
     "yup": "^0.27.0"
