--- a/packages/gadgets/package.json
+++ b/packages/gadgets/package.json
@@ -19,6 +19,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "^3.2.0",
+    "typescript": "^3.7.2",
     "wga-theme": "^0.1.1",
     "yup": "^0.27.0"
   },
