router now works like a dream

--- a/packages/wga-theme/package.json
+++ b/packages/wga-theme/package.json
@@ -28,12 +28,14 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@types/axios": "^0.14.0",
+    "@types/history": "^4.7.3",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.0.11",
     "@types/yup": "^0.26.24",
     "axios": "^0.19.0",
     "emotion": "^10.0.17",
     "events-and-things": "^0.7.0",
+    "history": "^4.10.1",
     "monaco-editor": "^0.18.1",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "path-to-regexp": "^3.1.0",
