--- a/packages/gadgets/package.json
+++ b/packages/gadgets/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "@sentry/browser": "^5.7.1",
     "@types/yup": "^0.26.24",
     "change-case": "^3.1.0",
     "emotion": "^10.0.17",
