--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@sentry/browser": "^5.7.1",
+    "@types/faker": "^4.1.7",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.4",
     "@types/react": "16.9.2",
@@ -21,6 +22,7 @@
     "date-fns": "^2.2.1",
     "emotion": "^10.0.17",
     "events-and-things": "^0.7.0",
+    "faker": "^4.1.0",
     "graphiql": "^0.14.2",
     "graphql": "^14.5.8",
     "react": "^16.9.0",
