--- a/packages/wga-theme/package.json
+++ b/packages/wga-theme/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^16.0.11",
     "@types/yup": "^0.26.24",
     "axios": "^0.19.0",
+    "change-case": "^3.1.0",
     "emotion": "^10.0.17",
     "events-and-things": "^0.7.0",
     "history": "^4.10.1",
