began work on permissions and providers

--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "resolutions": {
+    "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.4",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0"
+  }
 }
