--- a/packages/gadgets/package.json
+++ b/packages/gadgets/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@sentry/browser": "^5.7.1",
+    "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.4",
     "@types/yup": "^0.26.24",
     "change-case": "^3.1.0",
     "emotion": "^10.0.17",
     "events-and-things": "^0.7.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-scripts": "^3.2.0",
     "typescript": "^3.7.2",
     "wga-theme": "^0.1.1",
