--- a/packages/wga-theme/package.json
+++ b/packages/wga-theme/package.json
@@ -29,8 +29,8 @@
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@types/axios": "^0.14.0",
     "@types/history": "^4.7.3",
-    "@types/react": "^16.8.17",
-    "@types/react-dom": "^16.0.11",
+    "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.4",
     "@types/yup": "^0.26.24",
     "axios": "^0.19.0",
     "change-case": "^3.1.0",
@@ -41,8 +41,8 @@
     "monaco-editor-webpack-plugin": "^1.7.0",
     "path-to-regexp": "^3.1.0",
     "query-string": "^6.8.3",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "yup": "^0.27.0"
   },
   "devDependencies": {
