--- a/packages/wga-theme/package.json
+++ b/packages/wga-theme/package.json
@@ -56,6 +56,7 @@
     "@types/storybook__addon-links": "^3.3.5",
     "@types/storybook__react": "^4.0.2",
     "babel-loader": "^8.0.6",
+    "faker": "^4.1.0",
     "nodemon": "^1.19.1",
     "ts-node": "^8.4.1",
     "typescript": "^3.7.2"
