--- a/packages/gadgets/package.json
+++ b/packages/gadgets/package.json
@@ -16,6 +16,7 @@
     "@types/yup": "^0.26.24",
     "emotion": "^10.0.17",
     "events-and-things": "^0.7.0",
+    "query-string": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "^3.2.0",
