--- a/packages/gadgets/package.json
+++ b/packages/gadgets/package.json
@@ -14,6 +14,7 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "@types/yup": "^0.26.24",
+    "date-fns": "^2.8.0",
     "emotion": "^10.0.17",
     "events-and-things": "^0.7.0",
     "query-string": "^6.9.0",
