--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -8,7 +8,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "now-build": "REACT_APP_NODE_ENV=production react-scripts build",
+    "ship": "now --prod"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
@@ -21,7 +23,7 @@
     "@types/yup": "^0.26.24",
     "date-fns": "^2.2.1",
     "emotion": "^10.0.17",
-    "events-and-things": "^0.7.0",
+    "events-and-things": "^0.7.3",
     "faker": "^4.1.0",
     "graphiql": "^0.15.0",
     "graphql": "^14.5.8",
@@ -29,7 +31,7 @@
     "react-dom": "^16.11.0",
     "react-scripts": "^3.2.0",
     "typescript": "^3.7.2",
-    "wga-plugin": "^0.1.0",
+    "wga-plugin": "^0.3.0",
     "wga-theme": "^0.2.1",
     "yup": "^0.27.0"
   },
