--- a/packages/gadgets/package.json
+++ b/packages/gadgets/package.json
@@ -6,7 +6,9 @@
     "start": "PORT=3100 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "now-build": "REACT_APP_NODE_ENV=production react-scripts build",
+    "ship": "now --prod"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
@@ -16,7 +18,7 @@
     "@types/yup": "^0.26.24",
     "date-fns": "^2.8.0",
     "emotion": "^10.0.17",
-    "events-and-things": "^0.7.2",
+    "events-and-things": "^0.7.3",
     "query-string": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
