--- a/packages/gadgets/package.json
+++ b/packages/gadgets/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@sentry/browser": "^5.7.1",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.14",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "@types/yup": "^0.26.24",
@@ -24,7 +26,7 @@
     "react-dom": "^16.11.0",
     "react-scripts": "^3.2.0",
     "typescript": "^3.7.2",
-    "wga-theme": "^0.1.1",
+    "wga-theme": "^0.3.1",
     "yup": "^0.27.0"
   },
   "eslintConfig": {
