--- a/packages/admin/public/manifest.json
+++ b/packages/admin/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Authenticator",
+  "short_name": "Authpack",
   "name": "User and team management for your app",
   "icons": [
     {
