--- a/packages/wga-api/package.json
+++ b/packages/wga-api/package.json
@@ -2,7 +2,7 @@
   "name": "wga-api",
   "private": false,
   "version": "0.2.2",
-  "description": "Service for the Window Gadgets Authenticator API.",
+  "description": "API client for Authpack.",
   "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
