--- a/packages/wga-plugin/package.json
+++ b/packages/wga-plugin/package.json
@@ -2,7 +2,7 @@
   "name": "wga-plugin",
   "private": false,
   "version": "0.4.3",
-  "description": "Auth plugin for the Window Gadgets Authenticator.",
+  "description": "Plugin for Authpack.",
   "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
