--- a/packages/gadgets/public/manifest.json
+++ b/packages/gadgets/public/manifest.json
@@ -8,18 +8,18 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "assets/bolt.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "assets/bolt@2x.png",
       "type": "image/png",
       "sizes": "512x512"
     }	 
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#111111",
   "background_color": "#ffffff"
 }
