--- a/packages/wga-plugin/package.json
+++ b/packages/wga-plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wga-plugin",
+  "name": "@authpack/gadgets",
   "private": false,
   "version": "0.4.12",
   "description": "Plugin for Authpack.",
