--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -13,7 +13,7 @@
     "ship": "now --prod"
   },
   "dependencies": {
-    "@authpack/sdk": "^0.5.1",
+    "@authpack/react": "^0.5.6",
     "@authpack/theme": "^0.6.1",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@sentry/browser": "^5.7.1",
