--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -29,6 +29,7 @@
     "faker": "^4.1.0",
     "graphiql": "^0.17.0",
     "graphql": "^14.5.8",
+    "query-string": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "^3.2.0",
